--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -15,12 +15,14 @@
 			<label index="tx_hypeerror.flexform.sitemap">Sitemap</label>
 			<label index="tx_hypeerror.flexform.search">Search</label>
 
-			<label index="tx_hypeerror.palette.client">Client data</label>
+			<label index="tx_hypeerror.palette.address">Address</label>
+			<label index="tx_hypeerror.palette.client">Client</label>
 
 			<label index="tx_hypeerror_errorlog">404 Error</label>
 			<label index="tx_hypeerror_errorlog.domain">Domain</label>
 			<label index="tx_hypeerror_errorlog.url">URL</label>
 			<label index="tx_hypeerror_errorlog.path">Path</label>
+			<label index="tx_hypeerror_errorlog.address">Address</label>
 			<label index="tx_hypeerror_errorlog.host">Host</label>
 			<label index="tx_hypeerror_errorlog.referrer">Referrer</label>
 			<label index="tx_hypeerror_errorlog.user_agent">User Agent</label>
@@ -40,12 +42,14 @@
 			<label index="tx_hypeerror.flexform.sitemap">Sitemap</label>
 			<label index="tx_hypeerror.flexform.search">Suche</label>
 
-			<label index="tx_hypeerror.palette.client">Client-Daten</label>
+			<label index="tx_hypeerror.palette.address">Adresse</label>
+			<label index="tx_hypeerror.palette.client">Client</label>
 
 			<label index="tx_hypeerror_errorlog">404 Fehler</label>
 			<label index="tx_hypeerror_errorlog.domain">Domain</label>
 			<label index="tx_hypeerror_errorlog.url">URL</label>
 			<label index="tx_hypeerror_errorlog.path">Pfad</label>
+			<label index="tx_hypeerror_errorlog.address">Adresse</label>
 			<label index="tx_hypeerror_errorlog.host">Host</label>
 			<label index="tx_hypeerror_errorlog.referrer">Referrer</label>
 			<label index="tx_hypeerror_errorlog.user_agent">User-Agent</label>
